<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.6"
        android:background="@color/black" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp"
        android:layout_height="165dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/string_route_option"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/amap_cancel_btn" />
        </LinearLayout>

        <View
            android:id="@+id/line_seperator1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/Gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:paddingLeft="11dp"
            android:paddingRight="11dp">

            <Button
                android:id="@+id/route_option1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/setting_normal_btn"
                android:text="@string/string_route_option_recomm"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/route_option2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/setting_normal_btn"
                android:text="@string/string_route_option_exp"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/route_option3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/setting_normal_btn"
                android:text="@string/string_route_option_general"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:paddingLeft="11dp"
            android:paddingRight="11dp">

            <Button
                android:id="@+id/route_option4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/setting_normal_btn"
                android:text="@string/string_route_option_short"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/route_option5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/setting_normal_btn"
                android:text="@string/string_route_option_free"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>