<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="false"
    tools:context=".tnavifragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <biz.fatossdk.exlib.fatoslayout.AMapSCRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/relativeLayout_Background">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout_backButton"
                android:layout_centerVertical="true">
                <Button
                    android:id="@+id/button_back"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/amap_back_btn" />
            </LinearLayout>

            <!-- 상단바(출발지,목적지 영역)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/summary_topview_rectangle"
                android:id="@+id/linearLayout_Head"
                android:clickable="true"
                android:layout_toRightOf="@+id/linearLayout_backButton"
                android:visibility="visible">
                <!-- 출발지,도착지 핀 이미지 영역 -->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.25"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="16dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/summary_icon_start"
                            android:id="@+id/imageView_start"/>

                        <ImageView
                            android:id="@+id/img_comma"
                            android:layout_marginBottom="2.5dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="6dp"
                            android:layout_width="4dp"
                            android:layout_height="4dp"
                            android:src="@drawable/summary_icon_middle"
                            android:layout_below="@+id/imageView_start"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/img_comma2"
                            android:layout_marginTop="2.5dp"
                            android:layout_centerHorizontal="true"
                            android:layout_width="4dp"
                            android:layout_height="4dp"
                            android:layout_marginBottom="6dp"
                            android:src="@drawable/summary_icon_middle" />

                        <ImageView
                            android:layout_below="@+id/img_comma2"
                            android:layout_centerHorizontal="true"
                            android:layout_width="12dp"
                            android:layout_height="16dp"
                            android:src="@drawable/summary_icon_destination"/>
                    </RelativeLayout>
                </LinearLayout>

                <!-- 검색 버튼 영역 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="7.5">
                    <LinearLayout
                        android:id="@+id/ll_btn_start"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/summary_topview_search"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/editText_start"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/string_via_hint"
                            android:textColorHint="@color/lightGray"
                            android:gravity="center_vertical"
                            android:layout_marginStart="18dp"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:imeOptions="flagNoExtractUi|actionSearch"
                            android:inputType="text"/>

                        <ImageButton
                            android:id="@+id/imageButton_sClear"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/way_btn_cancel_n"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="3dp"
                            android:visibility="gone"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_btn_goal"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_height="36dp"
                        android:background="@drawable/summary_topview_search"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/editText_goal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text=""
                            android:textColorHint="@color/lightGray"
                            android:gravity="center_vertical"
                            android:textColor="@color/black"
                            android:layout_marginStart="18dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:focusableInTouchMode="true"
                            android:imeOptions="flagNoExtractUi|actionSearch"
                            android:inputType="text"/>

                        <ImageButton
                            android:id="@+id/imageButton_gClear"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/way_btn_cancel_n"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="3dp"
                            android:visibility="gone"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- 취소, 출발지 <-> 목적지 변경 이미지 영역 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:id="@+id/btn_route_cancel"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:gravity="top"
                        android:orientation="vertical">
                        <ImageButton
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/imageButton_SSearch"
                            android:layout_centerVertical="true"
                            android:background="@drawable/selector_search"
                            android:layout_marginRight="10dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:gravity="bottom"
                        android:id="@+id/btn_change_via_and_goal"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:orientation="vertical">
                        <ImageButton
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/imageButton_GSearch"
                            android:layout_centerVertical="true"
                            android:background="@drawable/selector_search"
                            android:layout_marginRight="10dp"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <biz.fatossdk.exlib.fatoslayout.AMapSCRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/linearLayout_backButton"
                android:background="@drawable/shape_round_rectangle_white"
                android:visibility="gone"
                android:id="@+id/relativeLayout_search">

                <EditText
                    android:id="@+id/editText_search"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_below="@+id/poiname_start_edit_text"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="17dp"
                    android:layout_toLeftOf="@+id/imageButton_clear"
                    android:background="@color/white"
                    android:hint="@string/string_weroutegoal"
                    android:imeOptions="flagNoExtractUi|actionSearch"
                    android:inputType="text"
                    android:textColor="@color/hiGeneralText"
                    android:textColorHint="@color/hiTextHint"
                    android:textSize="@dimen/drive_address_textsize"
                    android:windowSoftInputMode="stateAlwaysHidden" />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageButton_Search"
                    android:layout_toLeftOf="@+id/imageButton_cate"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_search"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/imageButton_cate"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toLeftOf="@+id/invisibleLine"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/selector_setting" />

                <ImageButton
                    android:id="@+id/imageButton_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imageButton_Search"
                    android:background="@drawable/way_btn_cancel_n"
                    android:visibility="gone"
                    android:layout_marginRight="10dp"/>

                <View
                    android:id="@+id/invisibleLine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="14dp" />
            </biz.fatossdk.exlib.fatoslayout.AMapSCRelativeLayout>
        </biz.fatossdk.exlib.fatoslayout.AMapSCRelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout_SettingInfo"
            android:gravity="right|center_vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv"
                    android:text="거리순"
                    android:textSize="10dp"
                    android:visibility="gone"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/rounded_black"
                    android:textColor="@color/weColorText2"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_country"
                android:text="TH"
                android:textSize="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/rounded"
                android:textColor="@color/weColorText2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_cate"
                android:text="@string/string_weallcate"
                android:textSize="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/rounded"
                android:textColor="@color/weColorText2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recyclerView_List"
                    android:background="@color/white"></androidx.recyclerview.widget.RecyclerView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/relativeLayout_SearchNoData">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_history2"
                        android:id="@+id/imageView_noData"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:id="@+id/txt_nosearchresult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_wenodata"
                        android:textColor="@color/hiTextHint"
                        android:textSize="20dp"
                        android:layout_below="@+id/imageView_noData"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout_progressBar"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:visibility="gone"
        android:background="@drawable/popup_bg_new">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_Address"
                android:text=""
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>